# src/main/java/com/jeeves/openapi/api/IngredientApi.java
@@ -5,6 +5,7 @@
  */
 package com.jeeves.openapi.api;
 
+import com.jeeves.openapi.dto.GroupedIngredients;
 import com.jeeves.openapi.dto.Ingredient;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
@@ -26,7 +27,7 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2020-05-17T18:39:11.880040700+03:00[Europe/Moscow]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2020-05-24T15:10:22.455210800+03:00[Europe/Moscow]")
 
 @Validated
 @Api(value = "Ingredient", description = "the Ingredient API")
@@ -68,6 +69,27 @@ public interface IngredientApi {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
                     String exampleString = "{ \"image\" : \"image\", \"author\" : { \"password\" : \"password\", \"id\" : 0, \"email\" : \"email\", \"username\" : \"username\" }, \"name\" : \"name\", \"description\" : \"description\", \"id\" : 1, \"coctailIngredients\" : [ null, null ] }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    @ApiOperation(value = "Retrieves existent ingredients", nickname = "getIngredientsInGroups", notes = "", response = GroupedIngredients.class, responseContainer = "List", tags={ "Ingredient", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "List of all ingredients in groups", response = GroupedIngredients.class, responseContainer = "List") })
+    @RequestMapping(value = "/ingredients/inGroups",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<List<GroupedIngredients>> getIngredientsInGroups() {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"groupName\" : \"groupName\", \"ingredients\" : [ { \"image\" : \"image\", \"author\" : { \"password\" : \"password\", \"id\" : 0, \"email\" : \"email\", \"username\" : \"username\" }, \"name\" : \"name\", \"description\" : \"description\", \"id\" : 1, \"coctailIngredients\" : [ null, null ] }, { \"image\" : \"image\", \"author\" : { \"password\" : \"password\", \"id\" : 0, \"email\" : \"email\", \"username\" : \"username\" }, \"name\" : \"name\", \"description\" : \"description\", \"id\" : 1, \"coctailIngredients\" : [ null, null ] } ] }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
